--- a/style.css
+++ b/style.css
@@ -2,46 +2,91 @@ body{
   background-image: linear-gradient(rgba(34, 64, 68, 0.5),rgba(23, 42, 52, 0.5)),url(images/nice.jpg);
   background-position:center;
   background-size: cover;
-  overflow: hidden; /* Hide scrollbars */
+  background-repeat: no-repeat; /* Prevent background from repeating */
+  background-attachment: fixed; /* Make the background static */
 }
 
 .contents{
   color: #fff;
-  margin-left: 50px;
+  margin: 0 auto;
 }
 
 .contents h1{
   font-size: 100px;
   max-width: 1000px;
   font-weight: 100;
-
+  margin: 0 auto;
+  margin-bottom: 2%;
+  margin-top: 3%;
 }
 
 .contents h2{
-  font-size: 75px;
+  font-size: 85x;
   max-width: 1000px;
   font-weight: 100;
   margin-top: 100px;
-
+  margin: 0 auto;
 }
 
 .contents p{
   max-width: 850px;
   font-family: 'Poppins', sans-serif;
-  font-size: 24px;
+  font-size: 35px;
   text-align: center;
   max-width: 950px;
-  border-style: groove;
+  border-style:inherit;
   border-color: #6460606b;
   padding: 20px;
- }
-
-.slide-left{
-  animation: slideleft 1.5s linear forwards;
+  margin: 0 auto;
+  background-color: rgba(11, 11, 11, 0.2); /* Increased alpha value (less transparent) */
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
-.projects{
+.id{
   
+}
+
+.fade_in{
+  animation: fadein 1.5s linear forwards;
+  text-align: center;
+}
+
+.projects a{
+  color:white;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+}
+
+.item h3{
+  font-size: 50px;
+  text-align: center;
+}
+
+.item img{
+  max-width: 800px;
+  max-height: 700px;
+  margin: 0 auto;
+  display: block;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(50, 180, 120,0.7);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(50, 180, 120,1);
 }
 
 @keyframes hover-animation {
@@ -52,9 +97,9 @@ body{
   100% {color: rgb(50, 180, 120,1);}
 }
 
-@keyframes slideleft {
+@keyframes fadein {
   0%{
-    transform: translate(100px);
+    transform: translate(0);
     opacity: 0;
   }
   100%{
