--- a/navbar.css
+++ b/navbar.css
@@ -1,7 +1,9 @@
 .topnav {
-  background-color: #f2eded76;
-  display: flex;
+  background-color: #d9ff00;
   animation: slidedown 1.5s linear;
+  justify-content: center; /* Center the navigation bar items horizontally */
+  display: flex;
+
 }
 
 nav{
@@ -10,30 +12,25 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 3%;
 }
 
 .logo img{
   width:100px;
-  margin-top: 20%;
-  margin-left: 50%;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 nav ul li{
   display: inline-block;
-  list-style: none;
   margin: 10px 40px;
-  
 }
-
 
 /* Style the links inside the navigation bar */
 .topnav a {
   text-decoration: none;
   color: #000000;
   font-size: 30px;
-  font-family: 'Poppins', sans-serif;
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Change the color of links on hover */
