--- a/navbar.css
+++ b/navbar.css
@@ -1,71 +1,48 @@
-.topnav {
-  background-color: #d9ff00;
-  animation: slidedown 1.5s linear;
-  justify-content: center; /* Center the navigation bar items horizontally */
-  display: flex;
-
+*{
+  margin: 0;
+  padding: 0;
 }
 
-nav{
+.navbar {
+  background: linear-gradient(to left, rgb(248, 8, 0), rgb(132, 0, 255));
   width: 100%;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logo img{
-  width:100px;
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-nav ul li{
+  top: 0;
+  height: 60px;
+  position: fixed;
   display: inline-block;
-  margin: 10px 40px;
+  z-index: 1;
+}
+
+.navbar .logo img{
+  position: absolute; 
+  cursor: pointer;
+  margin-top: 0px;
+  left: 20px;   
+  height: 50px;
+  width: 100px;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
-  text-decoration: none;
+.navbar a {
   color: #000000;
-  font-size: 30px;
+  margin: 20px;
+  font-size: 24px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: color 0.4s ease, background 0.2s ease, transform 0.4s ease;
+  text-decoration: none;
+  padding: 2px 6px;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
-  color: rgb(30, 120, 150);
-  animation-name: hover-animation;
-  animation-duration: 0.7s;
+.navbar a:hover {
+  background: rgba(247, 247, 247, 0.568);
+  color: #ff4800;
+  border-radius: 5px;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-  color: rgb(60, 131, 152);
-}
-
-.par{
-  word-wrap:normal;
-  width:200px;
-  font-family:fantasy;
-}
-
-@keyframes hover-animation {
-  0% {color: rgba(0, 0, 0, 0.2);}
-  25% {color: rgba(8, 30, 40, 0.4);}
-  50% {color: rgb(16, 60, 80, 0.6);}
-  75% {color: rgb(24, 90, 120, 0.8);}
-  100% {color: rgb(30, 120, 150,1);}
-}
-
-@keyframes slidedown {
-  0%{
-    transform: translate(-100);
-    opacity: 0;
-  }
-  100%{
-    transform: translate(0);
-    opacity: 1;
-  }
+ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  align-items: center;
 }
