--- a/style.css
+++ b/style.css
@@ -3,29 +3,30 @@
   padding: 0;
 }
 
-body{
-  background-color: rgb(189, 184, 184);
-  /*background-image: linear-gradient(rgba(245, 127, 127, 0.082),rgb(0, 0, 0)),url(images/nice.jpg);
-  background-position:center;
+body {
+  background-color: rgba(0, 0, 0, 0.849);
+  background-image: linear-gradient(rgba(245, 127, 127, 0.082), rgb(0, 0, 0)),
+    url(images/nice.jpg);
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed; */
-  font-family: 'Poppins', sans-serif;
+  background-attachment: fixed;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  height: 100vh; /* Full viewport height */
+  height: 100vh;
+  display: block;
 }
 
-.welcome_box{
+.welcome_box {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
   border-radius: 20px;
   margin: 160px auto; /* Add margin-top to account for the navbar height */
-  box-shadow: rgb(255, 255, 255) 0px 6px 30px;
-  max-width: 690px;
+  max-width: 700px;
 }
 
-.welcome_box h2{
+.welcome_box h2 {
   font-size: 50px;
   text-align: center;
   color: #ffffff;
@@ -39,22 +40,25 @@ body{
   justify-content: center; /* Center vertically */
   text-align: center; /* Center text */
   font-size: 1.5rem;
-  font-weight:bolder;
+  font-weight: bolder;
+  color: white;
 }
 
-.get_started img{
+.get_started img {
   height: 100px;
   width: 100px;
   transition: 300ms;
 }
 
-.get_started img:hover{
-  transform: scale(1.2); /* Move the icon to the right and scale it up by 20% */; /* Move the icon to the right to make space for text */
+.get_started img:hover {
+  transform: scale(
+    1.2
+  ); /* Move the icon to the right and scale it up by 20% */ /* Move the icon to the right to make space for text */
   transition: 300ms;
   cursor: pointer;
 }
 
-.parbox{
+.parbox {
   color: white;
   margin: 0 auto;
   display: flex;
@@ -63,7 +67,7 @@ body{
   justify-content: center;
 }
 
-.parbox p{
+.parbox p {
   font-size: 25px;
   margin-top: 5%;
   padding: 10px 10px 10px 10px;
@@ -72,9 +76,156 @@ body{
   max-width: 80%;
   border-color: #6460606b;
   text-align: left;
-  background-color: rgba(11, 11, 11, 0.2); /* Increased alpha value (less transparent) */
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  background-color: rgba(
+    11,
+    11,
+    11,
+    0.2
+  ); /* Increased alpha value (less transparent) */
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
+
+/* Region Skills */
+.skills {
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.skills-bar {
+  padding: 25px 30px;
+}
+
+.skills-bar .bar {
+  margin: 25px 0;
+}
+
+.skills-bar .bar .info span {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.skills-bar .bar .info {
+  margin-bottom: 8px;
+  color: #07374a;
+}
+
+.skills-bar .bar .progress-line {
+  position: relative;
+  height: 10px;
+  width: 550px;
+  background: #f0f0f0;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.bar .progress-line span {
+  position: fixed;
+  left: 0px;
+  background: #00ffd5;
+  height: 100%;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+@keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+.progress-line .java {
+  width: 70%;
+}
+.progress-line .csharp {
+  width: 70%;
+}
+.progress-line .python {
+  width: 70%;
+}
+.progress-line .html {
+  width: 70%;
+}
+.progress-line .css {
+  width: 70%;
+}
+.progress-line .bootstrap {
+  width: 70%;
+}
+.progress-line .javascript {
+  width: 70%;
+}
+
+.bar .progress-line span::before {
+  position: absolute;
+  content: "";
+  height: 0;
+  right: 0;
+  top: -14px;
+  width: 0;
+  border: 7px solid transparent;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  border-top-style: #f0f0f0;
+  border-top-color: #07374a;
+}
+
+.bar .progress-line span::after {
+  position: absolute;
+  right: 0;
+  top: -28px;
+  color: #f0f0f0;
+  font-size: 12px;
+  font-weight: 700;
+  background: #07374a;
+  padding: 1px 8px;
+  border-radius: 3px;
+}
+
+.progress-line .java::after {
+  content: "70%";
+}
+.progress-line .csharp::after {
+  content: "70%";
+}
+.progress-line .python::after {
+  content: "70%";
+}
+.progress-line .html::after {
+  content: "70%";
+}
+.progress-line .css::after {
+  content: "70%";
+}
+.progress-line .bootstrap::after {
+  content: "70%";
+}
+.progress-line .javascript::after {
+  content: "70%";
+}
+.progress-line .c::after {
+  content: "70%";
+}
+
+/* ////........Media Query........//// */
+
+@media (max-width: 700px) {
+  .skills {
+    width: 80%;
+  }
+
+  .skills-bar .bar .progress-line {
+    width: 100%;
+  }
+}
+/* End Region Skills */
 
 section {
   padding: 50px 20px;
@@ -83,6 +234,7 @@ section {
 
 .section_title {
   display: flex;
+  color: white;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
@@ -94,6 +246,10 @@ section {
   margin: 0 20px;
   white-space: nowrap;
   position: relative;
+}
+
+h1 {
+  color: white;
 }
 
 .section_title::before,
@@ -117,90 +273,103 @@ section {
   font-size: 20px;
   padding: 20px;
   border-radius: 10px;
-  margin: 100px auto; 
-  box-shadow: rgba(185, 111, 14, 0.5) 10px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px; /* Add a subtle shadow */
+  margin: 100px auto;
+  box-shadow: rgba(185, 111, 14, 0.5) 10px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px; /* Add a subtle shadow */
   transition: height 0.8s ease; /* Smooth transition for height changes */
   overflow: hidden; /* Ensure content doesn't overflow */
   max-width: 800px;
 }
 
-.container h1{
+.container h1 {
   font-size: 70px;
   text-align: center;
   color: #ffffff;
 }
 
-.container h2{
+.container h2 {
   font-size: 50px;
   text-align: center;
   color: #ffffff;
 }
 
-ul{
+ul {
   text-align: center;
   align-items: center;
 }
 
-.fade_in{
+.fade_in {
   animation: fadein 1.5s linear forwards;
 }
 
+/* Region Scrollbar */
 ::-webkit-scrollbar {
   width: 6px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: #ffffff;
-
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(50, 180, 120,0.7);
+  background: rgb(50, 180, 120, 0.7);
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(50, 180, 120,1);
+  background: rgb(50, 180, 120, 1);
 }
 
-.social{
+/* End Region Scrollbar */
+
+/* Region Social */
+.social {
   position: fixed;
   top: 50%;
   left: 0; /* Align to the left side */
   transform: translateY(-50%);
 }
 
-.social img{
+.social img {
   width: 60px;
   height: 60px;
   margin-top: 30px;
   margin-left: 20px;
   justify-content: center; /* Center the navigation bar items horizontally */
-  display:block;
+  display: block;
   position: relative;
   transition: background-color 0.3s, transform 0.3s;
 }
 
-.social img:hover{
-  transform: translateX(20px) scale(1.3); /* Move the icon to the right and scale it up by 20% */; /* Move the icon to the right to make space for text */
+.social img:hover {
+  transform: translateX(20px) scale(1.3); /* Move the icon to the right and scale it up by 20% */ /* Move the icon to the right to make space for text */
 }
 
 @keyframes hover-animation {
-  0% {color: rgba(50, 180, 120, 0.2);}
-  25% {color: rgba(50, 180, 120, 0.4);}
-  50% {color: rgb(50, 180, 120,0.6);}
-  75% {color: rgb(50, 180, 120,0.8);}
-  100% {color: rgb(50, 180, 120,1);}
+  0% {
+    color: rgba(50, 180, 120, 0.2);
+  }
+  25% {
+    color: rgba(50, 180, 120, 0.4);
+  }
+  50% {
+    color: rgb(50, 180, 120, 0.6);
+  }
+  75% {
+    color: rgb(50, 180, 120, 0.8);
+  }
+  100% {
+    color: rgb(50, 180, 120, 1);
+  }
 }
+/* End Region Social */
 
+/* Region Typing Text */
 @keyframes fadein {
-  0%{
+  0% {
     transform: translate(0);
     opacity: 0;
   }
-  100%{
+  100% {
     transform: translate(0);
     opacity: 1;
   }
@@ -213,42 +382,18 @@ ul{
 }
 
 @keyframes blink {
-  from, to { border-color: transparent; }
-  50% { border-color: #ffffff; }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #ffffff;
+  }
 }
 
 .typing-text.active::after {
-  content: '';
+  content: "";
   border-right: 2px solid #ffffff;
   animation: blink 0.75s step-end infinite;
 }
-
-/* CSS code for an old-school video game text cloud */
-.text-cloud {
-  position: relative;
-  background: #ac2020;
-  border: 4px solid #000000;
-  border-radius: 4px;
-  padding: 10px;
-  width: max-content;
-  font-size: 16px;
-  color: #000000;
-}
-
-.text-cloud::after {
-  content: '';
-  position: absolute;
-  bottom: -20px;
-  left: 20px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 20px 20px 0;
-  border-color: #ffffff transparent;
-  display: block;
-  z-index: 1;
-}
-
-.text-cloud {
-  image-rendering: pixelated;
-}
+/* End Region Typing Text */
