--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ body {
     rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
+.projectImage {
+  max-width: 800px;
+  height: auto;
+  width: auto;
+}
+
 /* Region Skills */
 .skills {
   top: 50%;
