--- a/navbar.css
+++ b/navbar.css
@@ -1,6 +1,7 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .navbar {
@@ -13,11 +14,11 @@
   z-index: 1;
 }
 
-.navbar .logo img{
-  position: absolute; 
+.navbar .logo img {
+  position: absolute;
   cursor: pointer;
   margin-top: 0px;
-  left: 20px;   
+  left: 20px;
   height: 50px;
   width: 100px;
 }
@@ -26,8 +27,9 @@
 .navbar a {
   color: #000000;
   margin: 20px;
-  font-size: 24px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 28px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: color 0.4s ease, background 0.2s ease, transform 0.4s ease;
   text-decoration: none;
   padding: 2px 6px;
