--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
   width: 80%;
 }
 .progress-line .csharp {
-  width: 80%;
+  width: 90%;
 }
 .progress-line .python {
   width: 80%;
@@ -206,7 +206,7 @@ body {
   content: "80%";
 }
 .progress-line .csharp::after {
-  content: "80%";
+  content: "90%";
 }
 .progress-line .python::after {
   content: "80%";
@@ -292,6 +292,44 @@ body {
 }
 
 /* ////........Media Query........//// */
+
+/* Make carousel captions responsive */
+@media (max-width: 768px) {
+  .carousel-caption {
+    font-size: 16px;
+    max-width: 90%;
+    padding: 10px;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    margin-top: 10%;
+    width: 25px;
+    height: 25px;
+  }
+
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    padding: 6px;
+    width: 25px;
+  }
+}
+
+/* Even narrower devices */
+@media (max-width: 500px) {
+  .carousel-caption h3 {
+    font-size: 18px;
+  }
+
+  .carousel-caption p {
+    font-size: 14px;
+  }
+
+  .carousel-item img {
+    width: 100%;
+    height: auto;
+  }
+}
 
 @media (max-width: 700px) {
   .skills {
