--- a/navbar.css
+++ b/navbar.css
@@ -23,7 +23,6 @@
   width: 100px;
 }
 
-/* Style the links inside the navigation bar */
 .navbar a {
   color: #000000;
   margin: 20px;
@@ -35,7 +34,6 @@
   padding: 2px 6px;
 }
 
-/* Change the color of links on hover */
 .navbar a:hover {
   background: rgba(247, 247, 247, 0.568);
   color: #ff4800;
@@ -47,4 +45,42 @@ ul {
   justify-content: center;
   list-style: none;
   align-items: center;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    height: 60px;
+    padding: 0 10px;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+  }
+
+  .navbar .logo {
+    position: absolute;
+    left: 0px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar .logo img {
+    height: 40px;
+    width: auto;
+  }
+
+  ul.links {
+    display: flex;
+    gap: 10px;
+    padding: 0;
+    margin: 0 auto;
+    white-space: nowrap;
+  }
+
+  .navbar a {
+    font-size: 18px;
+    margin: 0 8px;
+    padding: 4px 6px;
+  }
 }
