--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   border-radius: 20px;
   margin: 160px auto 20px auto; /* Add margin-top to account for the navbar height */
   max-width: 300px;
+  width: 60%;
 }
 
 .hello_box h2 {
@@ -39,6 +40,7 @@ body {
   border-radius: 20px;
   margin: 0px auto 20px auto; /* Add margin-top to account for the navbar height */
   max-width: 700px;
+  width: 60%;
 }
 
 .welcome_box h2 {
@@ -54,6 +56,7 @@ body {
   border-radius: 20px;
   margin: 30px auto 20px auto; /* Add margin-top to account for the navbar height */
   max-width: 380px;
+  width: 60%;
 }
 
 .message_box h3 {
@@ -117,6 +120,7 @@ body {
 }
 
 .projectImage {
+  width: 100%;
   max-width: 800px;
   height: auto;
   width: auto;
@@ -124,8 +128,8 @@ body {
 
 /* Region Skills */
 .skills {
-  top: 50%;
-  left: 50%;
+  width: 40%;
+  max-width: 660px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
@@ -158,7 +162,8 @@ body {
 .skills-bar .bar .progress-line {
   position: relative;
   height: 10px;
-  width: 550px;
+  width: 100%;
+  max-width: 550px;
   background: #f0f0f0;
   border-radius: 10px;
   transform: scaleX(0);
@@ -175,12 +180,6 @@ body {
   transform: scaleX(0);
   transform-origin: left;
   animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
-}
-
-@keyframes animate {
-  100% {
-    transform: scaleX(1);
-  }
 }
 
 .progress-line .java {
@@ -246,101 +245,53 @@ body {
   padding: 1px 8px;
   border-radius: 3px;
 }
+/* End region Skills */
 
-.carousel-item img {
-  max-width: 100%;
-  max-height: auto; /* Set a fixed height */
-  object-fit: cover; /* Ensure images are scaled proportionally */
-  margin: 0 auto 20px;
+/* region Carousel */
+
+
+.carousel {
+  position: relative;
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-  width: 30px;
-  height: 30px;
-  margin-top: 20%;
-}
-
-.carousel-control-prev {
-  left: 15%;
-}
-
-.carousel-control-next {
-  right: 15%;
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 10px 10px;
-  width: 30px;
-  border-radius: 20%;
+.carousel-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .carousel-caption {
   position: static;
-  text-align: left;
+  transform: none;
+  margin: 20px auto 0 auto;
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 15px;
-  margin-top: 15px;
+  padding: 20px;
   border-radius: 10px;
-  font-size: 18px;
-  max-width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
+  max-width: 800px;
+  width: 90%;
+  text-align: left;
+  color: white;
 }
 
-/* ////........Media Query........//// */
-
-/* Make carousel captions responsive */
-@media (max-width: 768px) {
-  .carousel-caption {
-    font-size: 16px;
-    max-width: 90%;
-    padding: 10px;
-  }
-
-  .carousel-control-prev,
-  .carousel-control-next {
-    margin-top: 10%;
-    width: 25px;
-    height: 25px;
-  }
-
-  .carousel-control-prev-icon,
-  .carousel-control-next-icon {
-    padding: 6px;
-    width: 25px;
-  }
+.carousel-control-prev,
+.carousel-control-next {
+  position: absolute;
+  top: 30%;
+  width: 50px;
+  height: 50px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  z-index: 10;
 }
 
-/* Even narrower devices */
-@media (max-width: 500px) {
-  .carousel-caption h3 {
-    font-size: 18px;
-  }
-
-  .carousel-caption p {
-    font-size: 14px;
-  }
-
-  .carousel-item img {
-    width: 100%;
-    height: auto;
-  }
+.carousel-control-prev {
+  left: 2%;
 }
 
-@media (max-width: 700px) {
-  .skills {
-    width: 80%;
-  }
-
-  .skills-bar .bar .progress-line {
-    width: 100%;
-  }
+.carousel-control-next {
+  right: 2%;
 }
-/* End Region Skills */
+/* End region Carousel */
 
 section {
   padding: 50px 20px;
@@ -363,10 +314,6 @@ section {
   position: relative;
 }
 
-h1 {
-  color: white;
-}
-
 .section_title::before,
 .section_title::after {
   content: "";
@@ -383,41 +330,7 @@ h1 {
   margin-left: 20px;
 }
 
-.container {
-  background-color: rgba(0, 0, 0, 0.8);
-  font-size: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  margin: 100px auto;
-  box-shadow: rgba(185, 111, 14, 0.5) 10px 15px 25px,
-    rgba(0, 0, 0, 0.05) 0px 5px 10px; /* Add a subtle shadow */
-  transition: height 0.8s ease; /* Smooth transition for height changes */
-  overflow: hidden; /* Ensure content doesn't overflow */
-  max-width: 800px;
-}
-
-.container h1 {
-  font-size: 70px;
-  text-align: center;
-  color: #ffffff;
-}
-
-.container h2 {
-  font-size: 50px;
-  text-align: center;
-  color: #ffffff;
-}
-
-ul {
-  text-align: center;
-  align-items: center;
-}
-
-.fade_in {
-  animation: fadein 1.5s linear forwards;
-}
-
-/* Region Contact */
+/* region Contact */
 
 .contact-box {
   max-width: 800px;
@@ -439,9 +352,9 @@ ul {
   margin: 0px 20px;
   flex-direction: column;
 }
-/* End Region Contact */
+/* End region Contact */
 
-/* Region Scrollbar */
+/* region Scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -458,13 +371,12 @@ ul {
   background: rgb(106, 50, 180, 1);
 }
 
-/* End Region Scrollbar */
+/* End region Scrollbar */
 
-/* Region Social */
+/* region Social */
 .social {
   position: fixed;
   top: 50%;
-  left: 0; /* Align to the left side */
   transform: translateY(-50%);
 }
 
@@ -483,6 +395,15 @@ ul {
   transform: translateX(20px) scale(1.3); /* Move the icon to the right and scale it up by 20% */ /* Move the icon to the right to make space for text */
 }
 
+/* end region Social */
+
+/* region Animations */
+@keyframes animate {
+  100% {
+    transform: scaleX(1);
+  }
+}
+
 .hidden_left {
   opacity: 0;
   transition: all 1s;
@@ -499,3 +420,91 @@ ul {
   opacity: 1;
   transform: translateX(0);
 }
+/* End region Animations */
+
+/* ////........Media Query........//// */
+
+@media (max-width: 768px) {
+  .section_title h1 {
+    font-size: 1.8em;
+  }
+
+  .hello_box h2,
+  .welcome_box h2,
+  .container h1,
+  .container h2 {
+    font-size: 1.8em;
+  }
+
+  .message_box h3,
+  .parbox p,
+  .skills h3 {
+    font-size: 1.1em;
+  }
+
+  .parbox h3{
+    font-size: 1.3em;
+  }
+
+  .get_started img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .social {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 20px 0;
+    transform: translateY(-50%);
+  }
+
+  .social img {
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    transition: transform 0.3s;
+  }
+
+  .social img:hover {
+    transform: translateX(10px) scale(1.2);
+  }
+  
+  .carousel-caption {
+    position: static;
+    margin: 20px auto 0 auto;
+    width: 95%;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+  }
+
+  .carousel-caption p {
+    max-height: none;
+    overflow: visible;
+    padding: 0;
+    text-align: left;
+    font-size: 0.95rem;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next{
+    top: 20%;
+  }
+
+  .carousel-caption h3 {
+    font-size: 1.2rem;
+  }
+
+  .skills {
+    width: 100%;
+    padding: 10px;
+  }
+}
+/* End Region Skills */
